# crypto-lab-quantum-vault-kpqc

./: .gitignore  AUDIT-VERIFICATION-REPORT.md  CONTRIBUTING.md  Cargo.toml  README.md  ci_logs_2.txt  deny.toml  gemini-results.md
.github/workflows/: ci.yml  deploy-pages.yml  deploy.yml  fuzz.yml
crates/qv-cli/: Cargo.toml
crates/qv-cli/src/: main.rs
crates/qv-cli/tests/: cli_integration.rs
crates/qv-core/: Cargo.toml  build.rs  randombytes_shim.c
crates/qv-core/benches/: crypto_bench.rs
crates/qv-core/fuzz/: Cargo.toml
crates/qv-core/fuzz/fuzz_targets/: fuzz_aead_protect.rs  fuzz_kem_handshake.rs  fuzz_signature_verify.rs  fuzz_wasm_api.rs
crates/qv-core/src/: algorithm.rs  constants.rs  container.rs  decrypt.rs  encrypt.rs  error.rs  lib.rs  shamir.rs  wasm.rs
crates/qv-core/tests/: corpus_tests.rs  differential_tests.rs  nonce_tests.rs  property_tests.rs  tamper_tests.rs  test_vectors.rs
docs/: ARCHITECTURE.md  CRYPTO-DECISIONS.md  architecture.md  container-format.md  demo-walkthrough.md  haetae-timing-audit.md  implementation-notes.md  security-audit-checklist.md  smaug-timing-audit.md  specification.md  test-strategy.md  threat-model.md
src/vault/: file.ts
wasm/: build.sh
wasm/src/: haetae_exports.c  randombytes_wasm.c  smaug_exports.c
web-demo/: README.md  eslint.config.js  index.html  package-lock.json  package.json  smaug-timing-harness.html  timing-harness.html  tsconfig.json  vite.config.ts  vitest.config.ts
web-demo/public/: haetae.wasm  haetae.wasm.sha256  smaug.wasm  smaug.wasm.sha256
web-demo/src/: i18n.ts  main.ts
(+30 files in other folders)
