[package]
name = "qv-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
qv_core = { package = "qv-core", path = "..", features = ["dev-backend", "wasm"] }
serde_json = "1.0"

# Prevent LTO stripping of fuzz entry points.
[profile.release]
debug = true

[[bin]]
name = "fuzz_container_parse"
path = "fuzz_targets/fuzz_container_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_shamir_reconstruct"
path = "fuzz_targets/fuzz_shamir_reconstruct.rs"
test = false
doc = false

[[bin]]
name = "fuzz_shamir_roundtrip"
path = "fuzz_targets/fuzz_shamir_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_decrypt_pipeline"
path = "fuzz_targets/fuzz_decrypt_pipeline.rs"
test = false
doc = false

[[bin]]
name = "fuzz_aead_protect"
path = "fuzz_targets/fuzz_aead_protect.rs"
test = false
doc = false

[[bin]]
name = "fuzz_kem_handshake"
path = "fuzz_targets/fuzz_kem_handshake.rs"
test = false
doc = false

[[bin]]
name = "fuzz_signature_verify"
path = "fuzz_targets/fuzz_signature_verify.rs"
test = false
doc = false

[[bin]]
name = "fuzz_wasm_api"
path = "fuzz_targets/fuzz_wasm_api.rs"
test = false
doc = false
